app now displays the rankings

--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Actual Medal Count</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/x-icon" href="./assets/favicon.ico">
+  <meta name="thumbnail" content="./assets/logo.png" />
+  <meta property="og:title" content="The Actual Olympic Medals Ranking" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.ryanmontville.com/" />
+  <meta property="og:image" content="./assets/logo.png" />
+  <meta name="description" property="og:description" content="Olympic rankings that include the medals for each athlete on a team.">
+  <meta name="author" content="Ryan Montville">
+  <meta name='mobile-web-app-capable' content='yes'>
+  <meta name='theme-color' content='#ffffff'>
+  <link rel="manifest" href="./assets/site.webmanifest">
 </head>
+
 <body>
   <app-root></app-root>
 </body>
+
 </html>
